--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "react-native": "0.50.4",
     "react-native-admob": "^2.0.0-beta.3",
     "react-native-rest-client": "^0.1.1",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "21.2.0",
     "babel-preset-react-native": "4.0.0",
+    "eslint-config-rallycoding": "^3.2.0",
     "jest": "21.2.1",
     "react-test-renderer": "16.0.0"
   },
