Adding codePush changes

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "appcenter": "^1.0.1",
     "appcenter-analytics": "^1.0.1",
     "appcenter-crashes": "^1.0.1",
+    "babel-preset-react-native-stage-0": "^1.0.1",
     "react": "16.0.0",
     "react-native": "0.50.4",
     "react-native-admob": "^2.0.0-beta.3",
