--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "babel-preset-react-native-stage-0": "^1.0.1",
+    "firebase": "^4.7.0",
     "react": "16.0.0",
     "react-native": "0.50.4",
     "react-native-admob": "^2.0.0-beta.3",
