--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -101,8 +101,8 @@ android {
         applicationId "com.nikhilninawe.quotes"
         minSdkVersion 16
         targetSdkVersion 22
-        versionCode 12
-        versionName "2.2"
+        versionCode 13
+        versionName "2.3"
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
@@ -148,6 +148,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-view-shot')
     compile project(':react-native-admob')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
