--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-deck-swiper": "^1.4.4",
     "react-native-rest-client": "^0.1.1",
     "react-native-snap-carousel": "^3.4.0",
+    "react-native-view-shot": "^2.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
