--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "react": "16.0.0",
     "react-native": "0.50.4",
     "react-native-admob": "^2.0.0-beta.3",
+    "react-native-background-job": "^2.0.1",
     "react-native-deck-swiper": "^1.4.4",
+    "react-native-modalbox": "^1.4.2",
+    "react-native-push-notification": "^3.0.2",
     "react-native-rest-client": "^0.1.1",
+    "react-native-router-flux": "^4.0.0-beta.25",
     "react-native-snap-carousel": "^3.4.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
