Hambuger with rn router-flux

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -148,6 +148,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-vector-icons')
     compile project(':react-native-background-job')
     compile project(':react-native-push-notification')
     compile project(':react-native-admob')
