--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -98,7 +98,8 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.nikhilninawe.quotes"
+        // applicationId "com.nikhilninawe.quotes"
+        applicationId "com.quotes"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 14
