--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-drawer": "^2.5.0",
     "react-native-modalbox": "^1.4.2",
     "react-native-push-notification": "^3.0.2",
+    "react-native-rate": "^1.0.6",
     "react-native-rest-client": "^0.1.1",
     "react-native-router-flux": "^4.0.0-beta.27",
     "react-native-snap-carousel": "^3.4.0",
