--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "react-native-rate": "^1.0.6",
     "react-native-rest-client": "^0.1.1",
     "react-native-router-flux": "^4.0.0-beta.27",
+    "react-native-share": "^1.0.23",
     "react-native-snap-carousel": "^3.4.0",
     "react-native-vector-icons": "^4.4.3",
+    "react-native-view-shot": "^2.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
