--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "dependencies": {
     "babel-preset-react-native-stage-0": "^1.0.1",
     "firebase": "^4.7.0",
-    "react": "16.0.0",
-    "react-native": "0.50.4",
+    "react": "^16.2.0",
+    "react-native": "^0.52.0",
     "react-native-admob": "^2.0.0-beta.3",
     "react-native-background-job": "^2.0.1",
     "react-native-modalbox": "^1.4.2",
