--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.quotes"
+    package="com.nikhilninawe.quotes"
     android:versionCode="2"
     android:versionName="1.1">
 
