--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.1.5",
+    "apollo-client": "^2.2.1",
+    "apollo-client-preset": "^1.0.6",
+    "apollo-link-http": "^1.3.2",
     "babel-preset-react-native-stage-0": "^1.0.1",
+    "graphql": "^0.12.3",
+    "graphql-tag": "^2.6.1",
     "react": "^16.2.0",
+    "react-apollo": "^2.0.4",
     "react-native": "^0.52.0",
     "react-native-admob": "^2.0.0-beta.3",
     "react-native-background-job": "^2.0.1",
