--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "apollo-client-preset": "^1.0.6",
     "apollo-link-http": "^1.3.2",
     "babel-preset-react-native-stage-0": "^1.0.1",
+    "buffer": "^5.0.8",
     "graphql": "^0.12.3",
     "graphql-tag": "^2.6.1",
     "react": "^16.2.0",
@@ -28,6 +29,7 @@
     "react-native-share": "^1.0.23",
     "react-native-simple-toast": "0.0.7",
     "react-native-snap-carousel": "^3.4.0",
+    "react-native-uuid": "^1.4.9",
     "react-native-vector-icons": "^4.5.0",
     "react-native-view-shot": "^2.2.0",
     "react-redux": "^5.0.6",
