--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -94,15 +94,15 @@ def enableSeparateBuildPerCPUArchitecture = true
 def enableProguardInReleaseBuilds = false
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.2"
 
     defaultConfig {
         applicationId "com.nikhilninawe.quotes"
         minSdkVersion 16
         targetSdkVersion 22
-        versionCode 43
-        versionName "4.3"
+        versionCode 44
+        versionName "4.4"
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
@@ -156,8 +156,10 @@ dependencies {
     compile project(':react-native-push-notification')
     compile project(':react-native-admob')
     compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:23.0.1"
+    compile "com.android.support:appcompat-v7:25.3.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
+    compile 'com.facebook.android:audience-network-sdk:4.27.0'
+    compile 'com.google.ads.mediation:facebook:4.27.0.0'
 }
 
 // Run this once to be able to run the application with BUCK
