--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "^0.52.0",
     "react-native-admob": "^2.0.0-beta.3",
     "react-native-background-job": "^2.0.1",
+    "react-native-i18n": "^2.0.12",
     "react-native-modalbox": "^1.4.2",
     "react-native-push-notification": "^3.0.2",
     "react-native-rate": "^1.0.6",
